Added tests for config, person_detail and user models
